# TP

.github/workflow/: main.yml
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  test.cpp
task3/: CMakeLists.txt  bld.sh
task3/install/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp
task5/cmake-with-flask/: Dockerfile
